# CourseWorking

./: README.md
XSmall-HMI-Player/: CMakeLists.txt  objects.json  saved_state.json
XSmall-HMI-Player/include/: Button.h  HistoryGraph.h  HmiPlayer.h  Image.h  InputField.h  JSONLoader.h  Line.h  Polyline.h  Rectangle.h  SceneFactory.h  Text.h  VariableDatabase.h  VisualObject.h  logger.h
XSmall-HMI-Player/src/: Button.cpp  HistoryGraph.cpp  HmiPlayer.cpp  Image.cpp  InputField.cpp  JSONLoader.cpp  Line.cpp  Polyline.cpp  Rectangle.cpp  SceneFactory.cpp  Text.cpp  VariableDatabase.cpp  VisualObject.cpp  main.cpp
